Update font size on percentage. Truncate percentage to 1 decimal. Fix issue where multiple of the same type of drop within the same drop table where getting hidden/overwritten. Change Gold to Gil.

--- a/beta.css
+++ b/beta.css
@@ -452,12 +452,13 @@ body {
   transform: scale(.55);
 }
 .material-icon-drop-percent {
-  font-size: .5rem;
+  font-size: .75rem;
   background: #333;
   border-radius: 0 0 .3rem .3rem;
-  padding-bottom: 4px;
-  padding-top: 2px;
+  padding-bottom: 3px;
+  padding-top: 3px;
   color: #fff;
+  line-height: .7rem;
 }
 
 .no-drop {
